- #489    First execution creates database regardless of confirmation response
          (thanks to Rafael Oliveira)
- #403    Remove incorrect output stating that an empty interval was recorded
          (thanks to xeruf)
- #408    Update documentation of hint `:all`
          (thanks to quazgar)
- #437    Minor AtomicFile cleanup
          (thanks to Shaun Ruffel)
- #439    Show error message if command track is called with an id
- #441    Return report return code
          (thanks to lospatchos)
- #450    Report 'totals.py' does not display data when no time range specified
          (thanks to squirrellyDave)
- #458    Add man documentation for configuring tag colors.
          (thanks to Lim Ding Wen)
- #463    Add colors to summary
          (thanks to Lim Ding Wen)
- #466    Ignore empty exclusion ranges
- #468    Refactor interval filtering
- #469    Do not leak IntervalFilters in IntervalFilterAndGroup
          (thanks to Shaun Ruffel)
- #470    Do not leak filter in IntervalFilterFirstOf
          (thanks to Shaun Ruffel)
- #474    Make display of ids and annotations in summary report configurable
- #477    Add configurable default range for reports
          (thanks to Oivvio Polite)
- #478    Add support for XDG Base Directory specification on Unixes
          (Thanks to Stanisław Wysocki)
- #491    Tracking an interval in the future while actively tracking time results in a database inconsistency
          (thanks to agentcoffee)
- #505    Report 'totals.py' does not truncate intervals to report range
          (thanks to eq0cdk)
- #510    Export intervals by IDs
          (thanks to Scott Mcdermott)
- #512    help.t fails on alpine with mandoc package
          (thanks to Edd Salkield)
-         Add option '--details' to 'test/problems' script

------ current release ---------------------------

1.4.3 (2021-05-28) - fc618636aacba6e52d447b482aeef58b375dfc8c

- #159    Tags enclosed in escaped double-quotes are not handled correctly