@@ -105,3 +105,4 @@ Thanks to the following, who submitted detailed bug reports and excellent sugges
   squirrellyDave
   Edd Salkield
   Oivvio Polite
+  Davide Crucitti
