@@ -47,6 +47,14 @@ Set the date range for the summary report.
 The value has to be a range hint, see timew-hints(7).
 Default value is ':day'
 
+**reports.summary.weekdays**::
+Determines whether the weekday column is shown in the summary.
+Default value is 'yes'
+
+**reports.summary.weeks**::
+Determines whether the week column is shown in the summary.
+Default value is 'yes'
+
 **tags.**__<tag>__**.color**::
 Assigns a specific foreground and background color to a tag.
 Examples of valid colors include 'white', 'gray8', 'black on yellow', and 'rgb345'.
